# ESP32

./: main.cpp  main.h
Bien_Tro_LCD/: platformio.ini
DTSV/: platformio.ini
DTSV/src/: ADXL345.cpp  ADXL345.h  main.cpp
MQTT_JSON_/Json Control Oto/: platformio.ini
MQTT_JSON_/MQTT/: platformio.ini
MQTT_JSON_/MQTT-JSON/: platformio.ini
NRF/NRF_PHAT/: platformio.ini
Nga_MPU6050/: platformio.ini
Nga_MPU6050/src/: main.cpp  mpu6050.cpp  mpu6050.h  usart.cpp  usart.h
Oto_Project/Control_oto_tu_xa/: platformio.ini
Oto_Project/Oto_Control/: platformio.ini
SSD_1306/SSD1306/: platformio.ini
Smart_House/Smart_Home_Pro/: platformio.ini
Smart_House/Tong_Ket_ESP32/: platformio.ini
Smart_House/smart_home/: platformio.ini
Step_Encoder/Encoder/: platformio.ini
Step_Encoder/Encoder_Step/: platformio.ini
Step_Encoder/Step/: platformio.ini
TFT/LVGL_Test/: platformio.ini
UART_A_Loi/src/: main.cpp  main.h
UART_Receive/src/: main.cpp  main.h
UART_Send/: platformio.ini
UART_Send/src/: main.cpp  main.h
USART/: platformio.ini
USART/src/: main.cpp  mqtt.cpp  mqtt.h  time_uart.cpp  time_uart.h  usart.cpp  usart.h
Unit_Test/Test_frame/: project.yml
Wi-Fi_ESP32_S3/: platformio.ini
bLINK_LED/: platformio.ini
code_esp32-main/code_esp32-main/ESP32_ModBus/Modbus_Master/: CMakeLists.txt  clean.sh  run.sh
code_esp32-main/code_esp32-main/ESP32_ModBus/Modbus_Master/include/: main.h  wg_convert.h  wg_debug.h  wg_modbus.h
code_esp32-main/code_esp32-main/ESP32_ModBus/Modbus_Master/src/: main.cpp  wg_convert.cpp  wg_debug.cpp  wg_modbus.cpp
(+157 files in other folders)
